--- a/main/res/values-de/strings.xml
+++ b/main/res/values-de/strings.xml
@@ -971,6 +971,11 @@
     <string name="internal_goto_targets_description">Dieser Cache speichert deine letzten \'Gehe zu\' Ziele</string>
     <string name="init_longtap_udc">Langes Tippen auf Karte</string>
     <string name="init_summary_longtap_udc">Langes Tippen auf Karte um einen benutzerdefinierten Cache anzulegen</string>
+    <!-- coordinate calculator hints -->
+    <string name="cc_hint_degrees">degrees</string>
+    <string name="cc_hint_minutes">minutes</string>
+    <string name="cc_hint_seconds">seconds</string>
+    <string name="cc_hint_secfractions">fraction of seconds</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">Suche nach Dateien\nin</string>
