--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -447,10 +447,10 @@
     <string name="about_nutshellmanual">Online manual</string>
 
     <string name="about_contributors_carnerodetails">as the father of c:geo</string>
-    <string name="about_contributors_recent">2018/2019 contributors</string>
+    <string name="about_contributors_recent">Recent contributors</string>
     <string name="about_contributors_specialthanks">Special thanks to</string>
     <string name="about_contributors_specialthanksdetails">· all our translation contributors on <a href="https://crowdin.net/project/cgeo">Crowdin.net</a>!\n· all issue creators\n· and all other supporters.\n</string>
-    <string name="about_contributors_other">Contributors from before 2018</string>
+    <string name="about_contributors_other">Other contributors</string>
     <string name="about_components">Components</string>
     <string name="contribution_code">code</string>
     <string name="contribution_tester">tester</string>
