--- a/main/res/values-it/strings.xml
+++ b/main/res/values-it/strings.xml
@@ -426,10 +426,10 @@
     <string name="changelog_github">Elenco di tutte le modifiche</string>
     <string name="about_nutshellmanual">Manuale online</string>
     <string name="about_contributors_carnerodetails">come padre di c:geo</string>
-    <string name="about_contributors_recent">contributori 2018/2019</string>
+    <string name="about_contributors_recent">Recent contributors</string>
     <string name="about_contributors_specialthanks">Ringraziamenti speciali a</string>
     <string name="about_contributors_specialthanksdetails">· tutti i nostri collaboratori per le traduzioni su <a href="https://crowdin.net/project/cgeo">Crowdin.net</a>!\n· tutti i bug tester\n· e tutti gli altri sostenitori.\n</string>
-    <string name="about_contributors_other">Contributori da prima del 2018</string>
+    <string name="about_contributors_other">Other contributors</string>
     <string name="about_components">Componenti</string>
     <string name="contribution_code">codice</string>
     <string name="contribution_tester">tester</string>
@@ -723,6 +723,7 @@
     <string name="map_source_google_satellite">Google: Satellite</string>
     <string name="map_source_osm_mapnik">OSM: Mappa</string>
     <string name="map_source_osm_offline">Offline</string>
+    <string name="map_source_osm_offline_combined">Combined (Offline)</string>
     <string name="init_sendToCgeo">Send to c:geo</string>
     <string name="settings_info_send2cgeo_title">Informazioni su send2cgeo</string>
     <string name="init_sendToCgeo_name">Nome dispositivo</string>
@@ -972,10 +973,10 @@
     <string name="init_longtap_udc">Tocca a lungo sulla mappa</string>
     <string name="init_summary_longtap_udc">Toccare a lungo sulla mappa per creare un cache definito dall\'utente</string>
     <!-- coordinate calculator hints -->
-    <string name="cc_hint_degrees">degrees</string>
-    <string name="cc_hint_minutes">minutes</string>
-    <string name="cc_hint_seconds">seconds</string>
-    <string name="cc_hint_secfractions">fraction of seconds</string>
+    <string name="cc_hint_degrees">gradi</string>
+    <string name="cc_hint_minutes">minuti</string>
+    <string name="cc_hint_seconds">secondi</string>
+    <string name="cc_hint_fraction">fraction</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">Ricerca file\nin</string>
