--- a/main/res/values-ca/strings.xml
+++ b/main/res/values-ca/strings.xml
@@ -426,10 +426,10 @@
     <string name="changelog_github">Llista de tots els canvis</string>
     <string name="about_nutshellmanual">Online manual</string>
     <string name="about_contributors_carnerodetails">as the father of c:geo</string>
-    <string name="about_contributors_recent">2018/2019 contributors</string>
+    <string name="about_contributors_recent">Recent contributors</string>
     <string name="about_contributors_specialthanks">Special thanks to</string>
     <string name="about_contributors_specialthanksdetails">· all our translation contributors on <a href="https://crowdin.net/project/cgeo">Crowdin.net</a>!\n· all issue creators\n· and all other supporters.\n</string>
-    <string name="about_contributors_other">Contributors from before 2018</string>
+    <string name="about_contributors_other">Other contributors</string>
     <string name="about_components">Components</string>
     <string name="contribution_code">code</string>
     <string name="contribution_tester">tester</string>
@@ -723,6 +723,7 @@
     <string name="map_source_google_satellite">Google: satèl·lit</string>
     <string name="map_source_osm_mapnik">OSM: Map</string>
     <string name="map_source_osm_offline">Fora de línia</string>
+    <string name="map_source_osm_offline_combined">Combined (Offline)</string>
     <string name="init_sendToCgeo">Send to c:geo</string>
     <string name="settings_info_send2cgeo_title">Informació sobre send2cgeo</string>
     <string name="init_sendToCgeo_name">El nom del teu dispositiu</string>
@@ -975,7 +976,7 @@
     <string name="cc_hint_degrees">degrees</string>
     <string name="cc_hint_minutes">minutes</string>
     <string name="cc_hint_seconds">seconds</string>
-    <string name="cc_hint_secfractions">fraction of seconds</string>
+    <string name="cc_hint_fraction">fraction</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">S\'està buscant els fitxers\na</string>
