--- a/main/res/values-cs/strings.xml
+++ b/main/res/values-cs/strings.xml
@@ -428,10 +428,10 @@
     <string name="changelog_github">Seznam všech změn</string>
     <string name="about_nutshellmanual">Online návod</string>
     <string name="about_contributors_carnerodetails">jako otec c:geo</string>
-    <string name="about_contributors_recent">Přispěvatelé 2018/2019</string>
+    <string name="about_contributors_recent">Nedávní přispěvatelé</string>
     <string name="about_contributors_specialthanks">Zvláštní poděkování</string>
     <string name="about_contributors_specialthanksdetails">· Všem našim překladatelům na <a href="https://crowdin.net/project/cgeo">Crowdin.net</a>!\n· všem oznamovatelům problémů\n· a všem ostatním podporovatelům.\n</string>
-    <string name="about_contributors_other">Přispěvatelé před rokem 2018</string>
+    <string name="about_contributors_other">Další přispěvatelé</string>
     <string name="about_components">Součásti</string>
     <string name="contribution_code">kód</string>
     <string name="contribution_tester">tester</string>
@@ -725,6 +725,7 @@
     <string name="map_source_google_satellite">Google: Satelitní</string>
     <string name="map_source_osm_mapnik">OSM: Mapa</string>
     <string name="map_source_osm_offline">Offline</string>
+    <string name="map_source_osm_offline_combined">Kombinované (Offline)</string>
     <string name="init_sendToCgeo">Poslat do c:geo</string>
     <string name="settings_info_send2cgeo_title">Info o funkci send2cgeo</string>
     <string name="init_sendToCgeo_name">Název tvého zařízení</string>
@@ -988,10 +989,10 @@
     <string name="init_longtap_udc">Dlouhé klapnutí na mapu</string>
     <string name="init_summary_longtap_udc">Dlouhým klepnutím na mapu vytvořte uživatelem definovanou kešku</string>
     <!-- coordinate calculator hints -->
-    <string name="cc_hint_degrees">degrees</string>
-    <string name="cc_hint_minutes">minutes</string>
-    <string name="cc_hint_seconds">seconds</string>
-    <string name="cc_hint_secfractions">fraction of seconds</string>
+    <string name="cc_hint_degrees">stupně</string>
+    <string name="cc_hint_minutes">minuty</string>
+    <string name="cc_hint_seconds">sekundy</string>
+    <string name="cc_hint_fraction">zlomek</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">Hledání souborů\nv</string>
