--- a/main/res/values-da/strings.xml
+++ b/main/res/values-da/strings.xml
@@ -426,10 +426,10 @@
     <string name="changelog_github">Liste over alle ændringer</string>
     <string name="about_nutshellmanual">Online manual</string>
     <string name="about_contributors_carnerodetails">som c:geo\'s fader</string>
-    <string name="about_contributors_recent">2018/2019 bidragsydere</string>
+    <string name="about_contributors_recent">Recent contributors</string>
     <string name="about_contributors_specialthanks">Særlig tak til</string>
     <string name="about_contributors_specialthanksdetails">· alle vores oversættere på <a href="https://crowdin.net/project/cgeo">Crowdin.net</a>!\n· alle fejlfindere\n· og alle andre bidragsydere.\n</string>
-    <string name="about_contributors_other">Bidragsydere før 2018</string>
+    <string name="about_contributors_other">Other contributors</string>
     <string name="about_components">Komponenter</string>
     <string name="contribution_code">kode</string>
     <string name="contribution_tester">tester</string>
@@ -723,6 +723,7 @@
     <string name="map_source_google_satellite">Google: Satellit</string>
     <string name="map_source_osm_mapnik">OSM: Kort</string>
     <string name="map_source_osm_offline">Offline</string>
+    <string name="map_source_osm_offline_combined">Combined (Offline)</string>
     <string name="init_sendToCgeo">Send2c:geo</string>
     <string name="settings_info_send2cgeo_title">Beskrivelse af send2c:geo</string>
     <string name="init_sendToCgeo_name">Din enheds navn</string>
@@ -975,7 +976,7 @@
     <string name="cc_hint_degrees">degrees</string>
     <string name="cc_hint_minutes">minutes</string>
     <string name="cc_hint_seconds">seconds</string>
-    <string name="cc_hint_secfractions">fraction of seconds</string>
+    <string name="cc_hint_fraction">fraction</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">Søger efter filer\ni</string>
