--- a/main/res/values-pl/strings.xml
+++ b/main/res/values-pl/strings.xml
@@ -428,10 +428,10 @@
     <string name="changelog_github">Lista wszystkich zmian</string>
     <string name="about_nutshellmanual">Podręcznik online</string>
     <string name="about_contributors_carnerodetails">jako ojciec c:geo</string>
-    <string name="about_contributors_recent">Współtwórcy 2018/2019</string>
+    <string name="about_contributors_recent">Recent contributors</string>
     <string name="about_contributors_specialthanks">Specjalne podziękowania dla</string>
     <string name="about_contributors_specialthanksdetails">· wszystkich naszych tłumaczy na <a href="https://crowdin.net/project/cgeo">Crowdin.net</a>!\n· wszystkich zgłaszających błędy\n· i wszystkich innych wspierających.\n</string>
-    <string name="about_contributors_other">Współtwórcy przed rokiem 2018</string>
+    <string name="about_contributors_other">Other contributors</string>
     <string name="about_components">Komponenty</string>
     <string name="contribution_code">kod</string>
     <string name="contribution_tester">tester</string>
@@ -725,6 +725,7 @@
     <string name="map_source_google_satellite">Google: Satelita</string>
     <string name="map_source_osm_mapnik">OSM: Mapnik</string>
     <string name="map_source_osm_offline">Offline</string>
+    <string name="map_source_osm_offline_combined">Combined (Offline)</string>
     <string name="init_sendToCgeo">Wyślij do c:geo</string>
     <string name="settings_info_send2cgeo_title">Informacje o send2cgeo</string>
     <string name="init_sendToCgeo_name">Nazwa urządzenia</string>
@@ -991,7 +992,7 @@
     <string name="cc_hint_degrees">degrees</string>
     <string name="cc_hint_minutes">minutes</string>
     <string name="cc_hint_seconds">seconds</string>
-    <string name="cc_hint_secfractions">fraction of seconds</string>
+    <string name="cc_hint_fraction">fraction</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">Szukam plików\nw</string>
