--- a/main/res/values-ro/strings.xml
+++ b/main/res/values-ro/strings.xml
@@ -427,10 +427,10 @@
     <string name="changelog_github">Afişează toate modificările</string>
     <string name="about_nutshellmanual">Online manual</string>
     <string name="about_contributors_carnerodetails">as the father of c:geo</string>
-    <string name="about_contributors_recent">2018/2019 contributors</string>
+    <string name="about_contributors_recent">Recent contributors</string>
     <string name="about_contributors_specialthanks">Special thanks to</string>
     <string name="about_contributors_specialthanksdetails">· all our translation contributors on <a href="https://crowdin.net/project/cgeo">Crowdin.net</a>!\n· all issue creators\n· and all other supporters.\n</string>
-    <string name="about_contributors_other">Contributors from before 2018</string>
+    <string name="about_contributors_other">Other contributors</string>
     <string name="about_components">Components</string>
     <string name="contribution_code">code</string>
     <string name="contribution_tester">tester</string>
@@ -724,6 +724,7 @@
     <string name="map_source_google_satellite">Google: Satellite</string>
     <string name="map_source_osm_mapnik">OSM: Map</string>
     <string name="map_source_osm_offline">Salvată</string>
+    <string name="map_source_osm_offline_combined">Combined (Offline)</string>
     <string name="init_sendToCgeo">Send to c:geo</string>
     <string name="settings_info_send2cgeo_title">Info despre send2cgeo</string>
     <string name="init_sendToCgeo_name">Numele dispozitivului tău</string>
@@ -983,7 +984,7 @@
     <string name="cc_hint_degrees">degrees</string>
     <string name="cc_hint_minutes">minutes</string>
     <string name="cc_hint_seconds">seconds</string>
-    <string name="cc_hint_secfractions">fraction of seconds</string>
+    <string name="cc_hint_fraction">fraction</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">Căutare fişiere\nîn</string>
